manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  namespace: default
  labels:
    app: wisecow   
spec:
  selector:
    matchLabels:
      app: wisecow
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
  template:
    metadata:
      labels:
        app: wisecow
      containers:
      - name: wisecow-service
        image: "wisecow/deployment:wiswcow-latest"
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi  
        imagePullPolicy: Always
        ports:
        - containerPort: 4499        
      imagePullSecrets:
        - name: pullsecret
    
---

apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: default 
spec:
  selector:
    app: wisecow
  type: ClusterIP
  ports:
  - protocol: "TCP"
    port: 4499
    targetPort: 4499


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - example.com
    secretName: wisecow-secret-tls
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wisecow-service
                servicePort: 4499
                  


#ingress-controller need 
#pull-secret needed for pulling image form docker hub or any other repository
